# pia

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRODUCT-INTELLIGENCE-AGENT.md  README.md  agent.json  pyproject.toml
.claude/memory/: MEMORY.md  feedback_branching.md
.github/workflows/: ci.yml
docs/: index.html
src/pia/: __init__.py  __main__.py  cli.py
src/pia/agent/: __init__.py  auth.py  router.py  server.py
src/pia/config/: __init__.py  defaults.py  settings.py
src/pia/graph/: __init__.py  linker.py  models.py  store.py  sync.py
src/pia/intelligence/: __init__.py  evidence.py  impact_tracker.py  prioritizer.py  sprint_planner.py
src/pia/llm/: client.py  context.py  prompts.py
src/pia/sources/: __init__.py  amplitude.py  codebase.py  intercom.py  sentry.py  youtrack.py  youtrack_mcp.py
tests/: test_integration.py
tests/fixtures/: README.md
tests/fixtures/sample_codebase/: app.min.js
tests/fixtures/sample_codebase/src/api/routes/: auth.py  reports.py
tests/fixtures/sample_codebase/src/models/: report.py  user.py
tests/fixtures/sample_codebase/src/services/auth/: service.py
tests/fixtures/sample_codebase/src/services/export/: controller.py  csv_export.py  pdf_export.py
tests/fixtures/sample_codebase/tests/: test_export.py
tests/fixtures/youtrack_responses/: issue_sample.json
tests/test_agent/: test_router.py  test_server.py
tests/test_config/: test_settings.py
tests/test_llm/: test_client.py
tests/test_sources/: test_codebase.py  test_youtrack.py
