[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "product-intelligence-agent"
version = "0.1.0"
description = "Product intelligence for JetBrains IDEs via ACP"
authors = [{name = "PIA Contributors"}]
readme = "README.md"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["youtrack", "jetbrains", "acp", "agent", "product-intelligence", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "acp-sdk==0.0.6",
    "httpx",
    "click",
    "anthropic",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlite-utils",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
pia = "pia.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio[trio]",
]

[project.urls]
Homepage = "https://github.com/ditvor/pia"
"Bug Tracker" = "https://github.com/ditvor/pia/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pia"]
